# tinynb

./: .gitignore  README.md  pyproject.toml
tests/: test.md  test.sh
tinynb/: __init__.py  __main__.py  tinynb.py
